did a bunch of crap

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,13 +8,18 @@
   <title>My Little Gnomie</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
   <div id="garden-life">Garden Life Span:</div>
   <div id="holder-box">
     <div id="holder"></div>
   </div>
-  <div id="gnome-stats">Gnome Stats:</div>
-  
+  <div id="stat-box">
+    <div id="gnome-stats">Gnome Stats:</div>
+    <div id="troll-stats">Troll Stats</div>
+  </div>
+
   <script src="src/script.js"></script>
 </body>
+
 </html>
